# openmeteo-rs-ureq

./: Cargo.toml  LICENSE  README.md
examples/: air_quality_example.rs  climate_change_example.rs  elevation_example.rs  ensemble_weather_example.rs  flood_example.rs  geocoding_example.rs  historical_weather_example.rs  marine_weather_example.rs  satallite_radiation_example.rs  weather_example.rs
src/: air_quality.rs  api.rs  climate_change.rs  elevation.rs  ensemble_weather.rs  flood.rs  geocoding.rs  historical_weather.rs  lib.rs  marine_weather.rs  satellite_radiation.rs  weather.rs  weather_api_generated.rs
