[package]
name = "openmeteo-rs-ureq"
version = "0.1.1"
edition = "2024"
description = "A Rust client for the Open-Meteo API using ureq"
license = "MIT"
license-file = "LICENSE"
keywords = ["weather", "forecast", "historical-weather", "climate"]

[dependencies]
flatbuffers = "25.2.10"
serde = "1.0.219"
serde_derive = "1.0.219"
ureq = { version = "3.0.10", features = ["json"] }
